WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
134311
REGRESSION (
r170254
): Input methods don’t work
https://bugs.webkit.org/show_bug.cgi?id=134311
Summary
REGRESSION (r170254): Input methods don’t work
mitz
Reported
2014-06-25 15:32:40 PDT
<
rdar://problem/17448049
>
Attachments
Don't throw away the callback function
(1.43 KB, patch)
2014-06-25 15:35 PDT
,
mitz
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2014-06-25 15:35:53 PDT
Created
attachment 233843
[details]
Don't throw away the callback function
mitz
Comment 2
2014-06-25 15:38:13 PDT
Fixed in <
http://trac.webkit.org/r170442
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug