<rdar://problem/17448049> REGRESSION (r170254): Input methods don’t work https://bugs.webkit.org/show_bug.cgi?id=134311

Reviewed by Tim Horton.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::getSelectedRangeAsync): Removed code that accidentally put the
callback function into a throwaway EditingRangeCallback.



Canonical link: https://commits.webkit.org/152291@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170442 268f45cc-cd09-0410-ab3c-d52691b4dbfc